experimental/parser/testdata/lexer/strings/unclosed1.proto.stderr.txt
error: unterminated string literal
  --> testdata/lexer/strings/unclosed1.proto:1:3
   | 
 1 | """
   |   ^ expected to be terminated by `"`
   = note: this string consists of a single orphaned quote

encountered 1 error
